objects/Document_Like_History__c.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Document Like History</relationshipLabel>
        <relationshipName>Article_View_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Document Like History</relationshipLabel>
        <relationshipName>Document_Like_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Techpub_Url__c</fullName>
        <label>Techpub Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_View_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Like History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DLH-{000000000}</displayFormat>
        <label>Document Like History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Like History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>